<resources>
    <string name="app_name">PoliVotoServer</string>
    <string name="hint_pass_1">Clave</string>
    <string name="hint_pass_2">Confirme clave</string>
    <string name="btn_confirmar_text">Confirmar</string>
    <string name="bienvenido_text_content">Definir clave maestra</string>
    <string name="etiqueta_clave_capturista">Capturista</string>
    <string name="hint_clave_capturista_1">Clave de capturista</string>
    <string name="texto_confirmar_clave">Confirme clave</string>
    <string name="etiqueta_clave_consultor">Consultor</string>
    <string name="hint_clave_consultor">Clave de consultor</string>
    <string name="hint_clave_participante">Clave de participante</string>
    <string name="texto_configuracion_de_ubicacion">¿A cuál tipo de centro pertenece?</string>
    <string name="hint_sitio_de_votacion">Nombre del lugar</string>
    <string name="etiqueta_clave_participante">Participante</string>
    <string name="menu_principal_confirmar">Confirmar</string>
    <string name="menu_principal_remover">Remover</string>
    <string name="menu_principal_agregar">Agregar</string>
    <string name="menu_info">Informacion</string>
    <string name="texto_usar_gps">Usar GPS</string>
    <string name="texto_grupos_de_poblacion">Grupos dentro de la población</string>
    <string name="texto_historial_votaciones">Votaciones hechas</string>
    <string name="splash_image_desc">PoliVoto ©</string>
    <string name="texto_credenciales">Claves</string>
    <string name="texto_grupos">Grupos</string>
    <string name="texto_zona">Zona</string>
    <string name="texto_votaciones">Votaciones</string>
    <string name="texto_configuraciones">Config.</string>
    <string name="icon_description">Icono de la entrada de menú</string>
    <string name="texto_sin_votaciones">Aún no hay votaciones hechas</string>
    <string name="texto_pass_previo">Contraseña anterior</string>
    <string name="texto_pass_nuevo">Contraseña nueva</string>
    <string name="texto_ayuda_titulo_votacion">Título de la votación</string>
    <string name="texto_encabezado_lista_preguntas">Preguntas</string>
    <string name="texto_escribir_contraseña">Escriba contraseña</string>
    <string name="texto_confirmar">Confirmar</string>
    <string name="texto_ingresar_fecha_inicio">Fecha</string>
    <string name="texto_ingresar_hora_termino">Hora</string>
    <string name="texto_ingresar_fecha_termino">Fecha</string>
    <string name="texto_ingresar_hora_inicio">Hora</string>
    <string name="splash_message">Una herramienta de confianza para la comunidad politécnica.</string>
    <string name="logo_splash_description">PoliVoto y sus logos como slogans son marcas registradas</string>
    <string name="texto_add">+</string>
    <string name="texto_less">-</string>
    <string name="texto_habilita_acceso_a_historial_votaciones">Habilitar\nhistorial</string>
    <string name="texto_opciones_de_pregunta">Opciones</string>
    <string name="texto_etiqueta_termino">Término</string>
    <string name="fechas_de_votacion_etiqueta_inicio">Inicio</string>
    <string name="servidor_global">Servidor Global</string>
    <string name="usar_matricula">Usar matrícula</string>
    <string name="usar_matricula_sum">Cargar un archivo con los datos de los participantes</string>
    <string name="matricula_file_name_sum">Nombre del archivo que contiene el listado de participantes</string>
    <string name="participar_en_votacion_global_sum">Unirse a un proceso existente</string>
    <string name="selecciona_server_label">Seleccionar votación</string>
    <string name="votaciones_abiertas">Procesos disponibles</string>
    <string name="votaciones_abiertas_sum">Lista de procesos globales</string>
    <string name="votaciones_en_progreso">Tiempo restante</string>
    <string name="lobby_counter_label">Participantes</string>
    <string name="formulario_de_votacion_texto_volver_botacion_global">Volver global</string>
    <string name="resultado_por_pregunta_texto_total">Total</string>
    <string name="configurar_fecha_texto_fecha">Fecha</string>
    <string name="configurar_fecha_texto_hora">Hora</string>
    <string name="configurar_fecha_texto_boton">Aceptar</string>
    <string name="hint_clave_capturista_confirmar_1">Confirmar clave</string>
    <string name="monitor_de_actividad_dispositivos_conectados">Dispositivos conectados</string>
    <string name="esperando_consultor_mensaje">Esperando consultor</string>
    <string name="primera_fase_nueva_votacion_etiqueta_titulo">Título:</string>
    <string name="primera_fase_nueva_votacion_etiqueta_fecha_inicial">Fecha inicial:</string>
    <string name="primera_fase_nueva_votacion_fecha_final">Fecha final:</string>
    <string name="primera_fase_nueva_votacion_etiqueta_nueva_pregunta">Agregar pregunta</string>
    <string name="segunda_fase_nueva_votacion_etiqueta_enunciado_pregunta">Pregunta:</string>
    <string name="segunda_fase_nueva_votacion_etiqueta_lista_de_opciones">Nueva opción</string>
    <string name="elemento_fila_pregunta_etiqueta_cantidad_opciones">opciones</string>
    <string name="dialogo_entrada_texto_cancelar">Cancelar</string>
    <string name="dialogo_entrada_texto_aceptar">Aceptar</string>
    <string name="nombre_lugar_votacion">¿Cuál es el nombre de su escuela o centro?</string>
    <string name="votacion_segura">Votación segura</string>
</resources>
