<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_principal_agregar"/>

    <item
        android:id="@+id/less"
        android:icon="@drawable/ic_remove_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_principal_remover"/>

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_info"/>

    <item
        android:id="@+id/confirmar"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_principal_confirmar"/>

</menu>