<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".actividades.Bienvenida">

    <TextView
        android:id="@+id/bienvenido_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_text_content"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/pass_1"
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:layout_below="@+id/bienvenido_text"
        android:hint="@string/hint_pass_1"
        android:background="@drawable/input_box_1"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/pass_2"
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:layout_marginTop="12sp"
        android:hint="@string/hint_pass_2"
        android:layout_below="@+id/pass_1"
        android:background="@drawable/input_box_1"
        android:inputType="textPassword"
        android:imeOptions="actionDone"/>
</RelativeLayout>