<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/configurar_fecha_texto_indicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:textSize="25sp"
        android:text="Let's make something cool"/>

    <TextView
        android:id="@+id/configurar_fecha_texto_fecha"
        android:layout_width="wrap_content"
        android:layout_height="44sp"
        android:layout_below="@+id/configurar_fecha_texto_indicacion"
        android:layout_marginTop="20sp"
        android:layout_toStartOf="@+id/configurar_fecha_pivote"
        android:layout_toLeftOf="@+id/configurar_fecha_pivote"
        android:layout_alignStart="@+id/configurar_fecha_texto_indicacion"
        android:layout_alignLeft="@+id/configurar_fecha_texto_indicacion"
        android:paddingTop="6sp"
        android:paddingBottom="9sp"
        android:textSize="20sp"
        android:background="@drawable/input_box_1"
        android:text="@string/configurar_fecha_texto_fecha"/>

    <TextView
        android:id="@+id/configurar_fecha_pivote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp"/>

    <TextView
        android:id="@+id/configurar_fecha_texto_hora"
        android:layout_width="wrap_content"
        android:layout_height="44sp"
        android:layout_below="@+id/configurar_fecha_texto_indicacion"
        android:layout_alignEnd="@+id/configurar_fecha_texto_indicacion"
        android:layout_alignRight="@+id/configurar_fecha_texto_indicacion"
        android:layout_toEndOf="@+id/configurar_fecha_pivote"
        android:layout_toRightOf="@+id/configurar_fecha_pivote"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:paddingTop="6sp"
        android:paddingBottom="9sp"
        android:background="@drawable/input_box_1"
        android:textSize="20sp"
        android:text="@string/configurar_fecha_texto_hora"/>

    <Button
        android:id="@+id/configurar_fecha_boton_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/configurar_fecha_texto_hora"
        android:layout_marginTop="12sp"
        android:layout_alignEnd="@+id/configurar_fecha_texto_hora"
        android:layout_alignRight="@+id/configurar_fecha_texto_hora"
        android:text="@string/configurar_fecha_texto_boton"/>
</RelativeLayout>