<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12sp"
        android:layout_marginStart="12sp"
        android:layout_marginLeft="12sp"
        android:layout_marginEnd="12sp"
        android:layout_marginRight="12sp">
        <TextView
            android:id="@+id/primera_fase_nueva_votacion_etiqueta_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:text="@string/primera_fase_nueva_votacion_etiqueta_titulo"/>
        <TextView
            android:id="@+id/primera_fase_nueva_votacion_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/primera_fase_nueva_votacion_etiqueta_titulo"
            android:layout_toEndOf="@+id/primera_fase_nueva_votacion_etiqueta_titulo"
            android:layout_toRightOf="@+id/primera_fase_nueva_votacion_etiqueta_titulo"
            android:layout_marginStart="4sp"
            android:layout_marginLeft="4sp"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/primera_fase_nueva_votacion_contenedor_fecha_inicial"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_below="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignEnd="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignRight="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignStart="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignLeft="@+id/primera_fase_nueva_votacion_contenedor_titulo">
        <TextView
            android:id="@+id/primera_fase_nueva_votacion_etiqueta_fecha_inicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:text="@string/primera_fase_nueva_votacion_etiqueta_fecha_inicial"/>
        <TextView
            android:id="@+id/primera_fase_nueva_votacion_fecha_inicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/primera_fase_nueva_votacion_etiqueta_fecha_inicial"
            android:layout_toRightOf="@+id/primera_fase_nueva_votacion_etiqueta_fecha_inicial"
            android:layout_marginStart="4sp"
            android:layout_marginLeft="4sp"
            android:textSize="14sp"
            android:layout_alignBottom="@+id/primera_fase_nueva_votacion_etiqueta_fecha_inicial"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/primera_fase_nueva_votacion_contenedor_fecha_final"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_below="@+id/primera_fase_nueva_votacion_contenedor_fecha_inicial"
        android:layout_alignEnd="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignRight="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignStart="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignLeft="@+id/primera_fase_nueva_votacion_contenedor_titulo">
        <TextView
            android:id="@+id/primera_fase_nueva_votacion_etiqueta_fecha_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:text="@string/primera_fase_nueva_votacion_fecha_final"/>
        <TextView
            android:id="@+id/primera_fase_nueva_votacion_fecha_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/primera_fase_nueva_votacion_etiqueta_fecha_final"
            android:layout_toRightOf="@+id/primera_fase_nueva_votacion_etiqueta_fecha_final"
            android:layout_marginStart="4sp"
            android:layout_marginLeft="4sp"
            android:textSize="14sp"
            android:layout_alignBottom="@+id/primera_fase_nueva_votacion_etiqueta_fecha_final"
            android:textStyle="bold"/>
    </RelativeLayout>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/primera_fase_nueva_votacion_switch_global"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/primera_fase_nueva_votacion_contenedor_fecha_final"
        android:layout_alignStart="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignLeft="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:text="@string/formulario_de_votacion_texto_volver_botacion_global"/>

    <TextView
        android:id="@+id/primera_fase_nueva_votacion_etiqueta_nueva_pregunta"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_below="@id/primera_fase_nueva_votacion_switch_global"
        android:layout_alignEnd="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignRight="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignStart="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignLeft="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_marginTop="20sp"
        android:gravity="center_vertical"
        android:text="@string/primera_fase_nueva_votacion_etiqueta_nueva_pregunta"/>
    <ListView
        android:id="@+id/primera_fase_nueva_votacion_lista_preguntas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/primera_fase_nueva_votacion_etiqueta_nueva_pregunta"
        android:layout_alignEnd="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignRight="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignStart="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_alignLeft="@+id/primera_fase_nueva_votacion_contenedor_titulo"
        android:layout_marginBottom="12sp"/>
</RelativeLayout>